WIFI驱动完成,能够将数据发送到服务器,传感器驱动有错误率高的问题

--- a/温度传感器/temperature_humidity_module/temperature_humidity_module.uvprojx
+++ b/温度传感器/temperature_humidity_module/temperature_humidity_module.uvprojx
@@ -14,7 +14,7 @@
         <TargetCommonOption>
           <Device>STM32F103C8</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F1xx_DFP.1.1.0</PackID>
+          <PackID>Keil.STM32F1xx_DFP.2.0.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IROM(0x08000000,0x10000) IRAM(0x20000000,0x5000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -429,16 +429,6 @@
               <FilePath>.\Lib\AM2302.h</FilePath>
             </File>
             <File>
-              <FileName>Timer.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\Lib\Timer.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Timer.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\Lib\Timer.h</FilePath>
-            </File>
-            <File>
               <FileName>USART.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\Lib\USART.cpp</FilePath>
@@ -447,6 +437,26 @@
               <FileName>USART.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Lib\USART.h</FilePath>
+            </File>
+            <File>
+              <FileName>GPIO.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\Lib\GPIO.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>GPIO.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Lib\GPIO.h</FilePath>
+            </File>
+            <File>
+              <FileName>ESP8266.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\Lib\ESP8266.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>ESP8266.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Lib\ESP8266.h</FilePath>
             </File>
           </Files>
         </Group>
